# onyx_image

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: NEUTRINO_CMAKE.md  atari_st_formats.md  commodore64_formats.md
docs/iff/: amivideo.md
examples/: CMakeLists.txt  example.cpp
include/onyx_image/: codec.hpp  onyx_image.hpp  palettes.hpp  surface.hpp  types.hpp
include/onyx_image/codecs/: ami.hpp  atarist.hpp  bmp.hpp  c64_doodle.hpp  c64_hires.hpp  dcx.hpp  drazlace.hpp  ega_raw.hpp  funpaint.hpp  gif.hpp  ico.hpp  interpaint.hpp  jpeg.hpp  koala.hpp  lbm.hpp  modex_raw.hpp  msp.hpp  pcx.hpp  pictor.hpp  png.hpp  pnm.hpp  qoi.hpp  runpaint.hpp  sgi.hpp  sunrast.hpp  tga.hpp
src/: CMakeLists.txt  codec.cpp  onyx_image.cpp  palettes.cpp  surface.cpp  types.cpp
src/codecs/: ami.cpp  atarist.cpp  bmp.cpp  byte_io.hpp  c64_common.hpp  c64_doodle.cpp  c64_hires.cpp  dcx.cpp  decode_helpers.hpp  drazlace.cpp  ega_raw.cpp  funpaint.cpp  ico.cpp  interpaint.cpp  koala.cpp  lbm.cpp  modex_raw.cpp  msp.cpp  pcx.cpp  pictor.cpp  png.cpp  pnm.cpp  qoi.cpp  runpaint.cpp  sgi.cpp  stb.cpp  sunrast.cpp
src/formats/: atarist.ds  bmp.ds  lbm.ds  msp.ds  pcx.ds  pictor.ds  sgi.ds  sunrast.ds
test/: CMakeLists.txt  test_ami_decoder.cpp  test_atarist_decoder.cpp  test_bmp_decoder.cpp  test_c64_doodle_decoder.cpp  test_c64_hires_decoder.cpp  test_dcx_decoder.cpp  test_drazlace_decoder.cpp  test_funpaint_decoder.cpp  test_ico_decoder.cpp  test_interpaint_decoder.cpp  test_koala_decoder.cpp  test_lbm_decoder.cpp  test_msp_decoder.cpp  test_onyx_image.cpp  test_pcx_decoder.cpp  test_pictor_decoder.cpp  test_pnm_decoder.cpp  test_runpaint_decoder.cpp  test_sgi_decoder.cpp  test_sunrast_decoder.cpp
test/data/: c64hires  runpaint
test/data/ami/: 64er.ami  cobra_mk3.ami  creator.ami  deluxe_kugeln.ami  diskette.ami  kugel.ami  london_taxi.ami  miami_vice.ami  screen1.ami  skat.ami  vulkan.ami  wald.ami
test/data/c64_doodle/: DDC64 COMPUTER  DDDIRTY PAIR  DDJAPANESE GIRL  DDLIL GAL  abydos.dd  eldiva.dd  natalie.dd
test/data/c64hires/: Camera  diane.c64  dogs_girl  dragon.d  plot pik2.p  test.hbm
test/data/dcx/: multipage.dcx
test/data/drazlace/: RAYTRACE.DRL  babscarr.drl  demopic2.drl  jn-bath4.drl  jn-persi.drl  lick3.drl  madhead.drl  misty.drl  testpic     .drl
test/data/funpaint/: a_dettke.fp  benz.fp  ferrari365.fp
test/data/interpaint/: abydos.iph  abydos.ipt
test/data/koala/: GPANTHE.gig  abydos.gg  abydos.koa  ggbikini  ggblonde  ggspazoz  paralax.koala  parallax.koala
test/data/runpaint/: Antic  Axe Battler  SnowballSunday  coaster.rpm  gol  kom  photon.eye.rpm  still.life.rpm
test/data/sunrast/: 32bpp.ras
